# workgarden

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
src/workgarden/: __init__.py  __main__.py  exceptions.py
src/workgarden/cli/: app.py
src/workgarden/cli/commands/: config.py  create.py  list.py  open.py  remove.py
src/workgarden/config/: __init__.py  loader.py  schema.py
src/workgarden/core/: hooks.py  worktree.py
src/workgarden/models/: __init__.py  state.py  worktree.py
src/workgarden/utils/: __init__.py  console.py  editor.py  git.py  root.py  template.py
tests/: __init__.py  conftest.py  test_cli_commands.py  test_console.py  test_editor.py  test_hooks.py  test_operations.py  test_root_detection.py  test_worktree_manager.py
